Gnome-shell v40+: Fix misaligned 'Do no disturb' button

--- a/gnome-shell/_drawing.scss
+++ b/gnome-shell/_drawing.scss
@@ -143,7 +143,7 @@
   //
 
     color: $fg_color;
-    background-color: $main_dark;
+    background-color: darken($bg_color, 2%);
     box-shadow: none;
     border: 1px solid $borders_color;
     text-shadow: 0 1px black;
@@ -156,7 +156,8 @@
     $_bg: if($c!=$osd_bg_color, transparentize($c, 0.5),
                           $osd_bg_color);
 
-    color: $selected_bg_color;
+    background-color: $selected_bg_color;
+    color: $selected_fg_color;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
     box-shadow: none;
@@ -170,8 +171,8 @@
     $_bg: if($c!=$osd_bg_color, transparentize($c, 0.3),
                             lighten($osd_bg_color,2%));
 
-    color: $selected_bg_color;
-    background-color: $_bg;
+    background-color: $selected_bg_color;
+    color: $selected_fg_color;
     border: 1px solid $borders_color;
     text-shadow: 0 1px black;
     icon-shadow: 0 1px black;
